--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Triggui - Lectura Visual</title>
+  <title>Triggui Visual</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       height: 100%;
       font-family: 'Segoe UI', sans-serif;
-      background: #F9F7F3;
+      background: #FFFCF2;
       color: #222;
     }
     .main {
@@ -69,12 +69,11 @@
       font-size: 1rem;
     }
     .book-cover {
-      gap: 10px;
+      gap: 12px;
     }
     .book-icon {
       width: 70px;
       height: 70px;
-      fill: #FFB703;
       animation: pulse 2s infinite;
     }
     @keyframes pulse {
@@ -101,7 +100,7 @@
       display: none;
     }
     .shock {
-      background: linear-gradient(to right, #EF476F, #FFD166);
+      background: linear-gradient(to right, #FF6B6B, #FFD93D);
       color: white;
       font-weight: bold;
       border: none;
@@ -126,18 +125,18 @@
 <body>
   <div class="main">
     <div class="grid">
-      <div class="block" id="detente" style="background: linear-gradient(135deg, #FB5607, #FFBE0B);">
+      <div class="block" id="detente" style="background: linear-gradient(135deg, #FFB5A7, #FCD5CE);">
         <span class="label" id="detenteLabel">Detente</span>
         <div class="accionables" id="accionablesText"></div>
       </div>
-      <div class="block" id="lee" style="background: linear-gradient(135deg, #3A86FF, #8338EC);">
+      <div class="block" id="lee" style="background: linear-gradient(135deg, #A0C4FF, #BDB2FF);">
         <span class="label" id="leeLabel">Lee</span>
         <div class="book-cover" id="leeCover"></div>
       </div>
-      <div class="block" id="question" style="background: linear-gradient(135deg, #FF006E, #FF8FAB);">
+      <div class="block" id="question" style="background: linear-gradient(135deg, #CAFFBF, #9BF6FF);">
         <span class="label">?</span>
       </div>
-      <div class="block" id="conecta" style="background: linear-gradient(135deg, #06D6A0, #8EECF5);">
+      <div class="block" id="conecta" style="background: linear-gradient(135deg, #FDFFB6, #FFC6FF);">
         <span class="label">Conecta</span>
       </div>
     </div>
@@ -153,6 +152,10 @@
         titulo: "El poder del ahora",
         autor: "Eckhart Tolle",
         tagline: "Un camino hacia la realización espiritual",
+        icon: `<svg class="book-icon" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+                 <circle cx="32" cy="32" r="28" fill="#A0C4FF" stroke="#555" stroke-width="2"/>
+                 <circle cx="32" cy="32" r="10" fill="#ffffff"/>
+               </svg>`,
         accionables: [
           "🧘‍♂️ Respira conscientemente ahora.",
           "🧠 Observa tus pensamientos sin juzgar.",
@@ -163,6 +166,10 @@
         titulo: "Mindset",
         autor: "Carol S. Dweck",
         tagline: "La actitud del éxito",
+        icon: `<svg class="book-icon" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+                 <path d="M32 4a28 28 0 100 56 28 28 0 000-56z" fill="#BDB2FF"/>
+                 <path d="M20 32c0-8 12-8 12 0s-12 8-12 0z" fill="#fff"/>
+               </svg>`,
         accionables: [
           "🚀 Abraza los desafíos.",
           "🔍 Aprende de los errores.",
@@ -173,6 +180,13 @@
         titulo: "Los 7 hábitos",
         autor: "Stephen R. Covey",
         tagline: "Lecciones poderosas en el cambio personal",
+        icon: `<svg class="book-icon" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+                 <circle cx="32" cy="32" r="28" fill="#FFC6FF"/>
+                 <g stroke="#fff" stroke-width="2" stroke-linecap="round">
+                   <line x1="20" y1="20" x2="44" y2="44"/>
+                   <line x1="44" y1="20" x2="20" y2="44"/>
+                 </g>
+               </svg>`,
         accionables: [
           "💪 Sé proactivo desde hoy.",
           "🎯 Comienza con un fin en mente.",
@@ -204,11 +218,7 @@
         .map(a => `<p>${a}</p>`)
         .join('');
 
-      leeCover.innerHTML = `
-        <svg class="book-icon" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-          <rect x="12" y="8" width="40" height="48" rx="4" ry="4" stroke="#ccc" stroke-width="2" fill="#fff"/>
-          <line x1="32" y1="8" x2="32" y2="56" stroke="#eee" stroke-width="2"/>
-        </svg>
+      leeCover.innerHTML = libroActual.icon + `
         <div class="book-title">${libroActual.titulo}</div>
         <div class="book-author">${libroActual.autor}</div>
         <div class="book-tagline">${libroActual.tagline}</div>
