--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,21 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Triggui Visual</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Triggui App</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       height: 100%;
-      font-family: 'Segoe UI', sans-serif;
-      background: #FFFCF2;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background-color: #fff;
       color: #222;
+      transition: background-color 0.3s ease;
+    }
+    body.dark {
+      background-color: #000;
     }
     .main {
       display: flex;
@@ -28,28 +33,26 @@
       flex-grow: 1;
     }
     .block {
-      flex: 1 1 calc(50% - 0.75vw);
-      max-width: calc(50% - 0.75vw);
-      height: calc(50% - 0.75vw);
+      flex: 1 1 22%;
+      max-width: 22%;
+      height: 75vh;
       border-radius: 16px;
+      font-weight: 600;
+      font-size: 1.12rem;
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
       cursor: pointer;
+      transition: all 0.3s ease;
       position: relative;
       overflow: hidden;
       color: white;
-      transition: transform 0.25s ease;
-    }
-    .block:active {
-      transform: scale(0.97);
     }
     .label {
       z-index: 1;
       position: relative;
-      font-weight: 600;
-      font-size: 1.2rem;
+      pointer-events: none;
     }
     .accionables, .book-cover {
       position: absolute;
@@ -57,40 +60,21 @@
       display: none;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
-      padding: 16px;
+      padding: 14px;
       border-radius: 16px;
       text-align: center;
-      background: rgba(255, 255, 255, 0.95);
-      color: #222;
     }
-    .accionables p {
-      margin: 10px 0;
-      font-size: 1rem;
+    .accionables {
+      background: rgba(255,255,255,0.95);
+      color: #222;
+      font-size: 0.88rem;
+      font-weight: 500;
+      flex-direction: column;
+      line-height: 1.4;
     }
     .book-cover {
-      gap: 12px;
-    }
-    .book-icon {
-      width: 70px;
-      height: 70px;
-      animation: pulse 2s infinite;
-    }
-    @keyframes pulse {
-      0%, 100% { transform: scale(1); opacity: 0.9; }
-      50% { transform: scale(1.15); opacity: 1; }
-    }
-    .book-title {
-      font-size: 1rem;
-      font-weight: bold;
-    }
-    .book-author {
-      font-size: 0.88rem;
-      font-style: italic;
-    }
-    .book-tagline {
-      font-size: 0.85rem;
-      color: #666;
+      background-size: cover;
+      background-position: center;
     }
     .block.show .accionables,
     .block.show .book-cover {
@@ -100,21 +84,20 @@
       display: none;
     }
     .shock {
-      background: linear-gradient(to right, #FF6B6B, #FFD93D);
+      background: linear-gradient(to right, #FC466B, #3F5EFB);
       color: white;
       font-weight: bold;
       border: none;
       border-radius: 32px;
-      padding: 12px 24px;
+      padding: 10px 24px;
       margin: 0 auto;
-      font-size: 0.95rem;
+      font-size: 0.9rem;
       cursor: pointer;
     }
     .logo-wrapper {
       display: flex;
       justify-content: center;
       align-items: center;
-      padding-top: 8px;
     }
     .trigguiletras {
       height: 22px;
@@ -125,22 +108,22 @@
 <body>
   <div class="main">
     <div class="grid">
-      <div class="block" id="detente" style="background: linear-gradient(135deg, #FFB5A7, #FCD5CE);">
+      <div class="block" id="detente" style="background: linear-gradient(135deg, #FF416C, #FF4B2B);">
         <span class="label" id="detenteLabel">Detente</span>
         <div class="accionables" id="accionablesText"></div>
       </div>
-      <div class="block" id="lee" style="background: linear-gradient(135deg, #A0C4FF, #BDB2FF);">
+      <div class="block" id="lee" style="background: linear-gradient(135deg, #36D1DC, #5B86E5);">
         <span class="label" id="leeLabel">Lee</span>
         <div class="book-cover" id="leeCover"></div>
       </div>
-      <div class="block" id="question" style="background: linear-gradient(135deg, #CAFFBF, #9BF6FF);">
+      <div class="block" id="question" style="background: linear-gradient(135deg, #FFB75E, #ED8F03);">
         <span class="label">?</span>
       </div>
-      <div class="block" id="conecta" style="background: linear-gradient(135deg, #FDFFB6, #FFC6FF);">
+      <div class="block" id="conecta" style="background: linear-gradient(135deg, #11998E, #38EF7D);">
         <span class="label">Conecta</span>
       </div>
     </div>
-    <button class="shock" id="shockBtn">📚👊 ¡Chócalas si abriste un libro físico!</button>
+    <button class="shock" id="shockBtn">📚👊 Chócalas por leer un libro físico</button>
     <div class="logo-wrapper">
       <img src="/trigguiletras.png" class="trigguiletras" />
     </div>
@@ -149,49 +132,12 @@
   <script>
     const libros = [
       {
-        titulo: "El poder del ahora",
-        autor: "Eckhart Tolle",
-        tagline: "Un camino hacia la realización espiritual",
-        icon: `<svg class="book-icon" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-                 <circle cx="32" cy="32" r="28" fill="#A0C4FF" stroke="#555" stroke-width="2"/>
-                 <circle cx="32" cy="32" r="10" fill="#ffffff"/>
-               </svg>`,
-        accionables: [
-          "🧘‍♂️ Respira conscientemente ahora.",
-          "🧠 Observa tus pensamientos sin juzgar.",
-          "🌟 Sumérgete en el presente sin miedo."
-        ]
+        portada: 'https://m.media-amazon.com/images/I/91bYsX41DVL.jpg',
+        accionables: ['🧱 Crea sistemas, no metas', '🧠 Identidad guía el hábito', '🔁 Mejora 1% diario']
       },
       {
-        titulo: "Mindset",
-        autor: "Carol S. Dweck",
-        tagline: "La actitud del éxito",
-        icon: `<svg class="book-icon" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-                 <path d="M32 4a28 28 0 100 56 28 28 0 000-56z" fill="#BDB2FF"/>
-                 <path d="M20 32c0-8 12-8 12 0s-12 8-12 0z" fill="#fff"/>
-               </svg>`,
-        accionables: [
-          "🚀 Abraza los desafíos.",
-          "🔍 Aprende de los errores.",
-          "💡 Cree que puedes cambiar."
-        ]
-      },
-      {
-        titulo: "Los 7 hábitos",
-        autor: "Stephen R. Covey",
-        tagline: "Lecciones poderosas en el cambio personal",
-        icon: `<svg class="book-icon" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-                 <circle cx="32" cy="32" r="28" fill="#FFC6FF"/>
-                 <g stroke="#fff" stroke-width="2" stroke-linecap="round">
-                   <line x1="20" y1="20" x2="44" y2="44"/>
-                   <line x1="44" y1="20" x2="20" y2="44"/>
-                 </g>
-               </svg>`,
-        accionables: [
-          "💪 Sé proactivo desde hoy.",
-          "🎯 Comienza con un fin en mente.",
-          "🛠️ Afila la sierra sin excusas."
-        ]
+        portada: 'https://m.media-amazon.com/images/I/71QKQ9mwV7L.jpg',
+        accionables: ['🧘‍♂️ No todo importa', '💩 Aprende a ignorar con intención', '🧠 Sé brutalmente honesto']
       }
     ];
 
@@ -213,23 +159,21 @@
 
     function sincronizarYMostrarAmbos() {
       seleccionarNuevoLibro();
-
-      accionablesText.innerHTML = libroActual.accionables
-        .map(a => `<p>${a}</p>`)
-        .join('');
-
-      leeCover.innerHTML = libroActual.icon + `
-        <div class="book-title">${libroActual.titulo}</div>
-        <div class="book-author">${libroActual.autor}</div>
-        <div class="book-tagline">${libroActual.tagline}</div>
-      `;
-
+      accionablesText.innerHTML = libroActual.accionables.join('<br>');
+      leeCover.style.backgroundImage = `url('${libroActual.portada}')`;
       detente.classList.add('show');
       lee.classList.add('show');
       detenteLabel.style.display = 'none';
       leeLabel.style.display = 'none';
       detenteOpen = true;
       leeOpen = true;
+      document.body.classList.add('dark');
+    }
+
+    function evaluarOscurecerFondo() {
+      if (!detenteOpen && !leeOpen) {
+        document.body.classList.remove('dark');
+      }
     }
 
     detente.addEventListener('click', () => {
@@ -239,6 +183,7 @@
         detente.classList.remove('show');
         detenteLabel.style.display = 'block';
         detenteOpen = false;
+        evaluarOscurecerFondo();
       }
     });
 
@@ -249,11 +194,22 @@
         lee.classList.remove('show');
         leeLabel.style.display = 'block';
         leeOpen = false;
+        evaluarOscurecerFondo();
       }
     });
 
     document.getElementById('shockBtn').addEventListener('click', () => {
       document.getElementById('shockBtn').innerText = '📚👏 ¡Bien leído!';
+    });
+
+    document.getElementById('question').addEventListener('click', () => {
+      document.body.classList.add('dark');
+      alert("🌟 Muy pronto una experiencia increíble.");
+    });
+
+    document.getElementById('conecta').addEventListener('click', () => {
+      document.body.classList.add('dark');
+      alert("🔗 Muy pronto podrás conectar con otros lectores.");
     });
   </script>
 </body>
