--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Triggui App</title>
+  <title>Triggui App Perfecta</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
-      height: 100%;
       width: 100%;
+      height: 100%;
       overflow: hidden;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       background-color: #fff;
@@ -20,46 +20,50 @@
     }
 
     .main {
+      width: 100vw;
+      height: 100vh;
+      padding: 2vh 2vw;
       display: flex;
       flex-direction: column;
-      height: 100%;
-      padding: 2vh 2vw;
+      justify-content: space-between;
       gap: 2vh;
     }
 
     .grid {
       display: flex;
       flex-wrap: wrap;
+      gap: 2vw;
+      width: 100%;
+      height: calc(100% - 80px);
       justify-content: space-between;
-      align-items: stretch;
-      gap: 2vh;
-      flex: 1;
+      align-content: space-between;
     }
 
     .block {
-      flex: 1 1 calc(50% - 1vh);
-      max-width: calc(50% - 1vh);
-      height: calc(50% - 1vh);
+      width: 48vw;
+      height: 48vh;
       border-radius: 16px;
       font-weight: 600;
-      font-size: 1.1rem;
+      font-size: 1.05rem;
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
-      cursor: pointer;
       position: relative;
       overflow: hidden;
       color: white;
+      cursor: pointer;
       transition: all 0.3s ease;
     }
 
-    @media (orientation: landscape) and (max-width: 1024px),
-           (min-width: 1025px) {
+    @media (orientation: landscape), (min-width: 1025px) {
       .block {
-        flex: 1 1 23.5%;
-        max-width: 23.5%;
-        height: 90vh;
+        width: 23.5vw;
+        height: 92vh;
+      }
+      .grid {
+        flex-wrap: nowrap;
+        justify-content: space-between;
       }
     }
 
@@ -75,7 +79,7 @@
       display: none;
       justify-content: center;
       align-items: center;
-      padding: 14px;
+      padding: 16px;
       border-radius: 16px;
       text-align: center;
     }
@@ -83,7 +87,7 @@
     .accionables {
       background: rgba(255,255,255,0.95);
       color: #222;
-      font-size: 0.88rem;
+      font-size: 0.85rem;
       font-weight: 500;
       flex-direction: column;
       line-height: 1.4;
@@ -104,12 +108,12 @@
     }
 
     .shock {
-      background: linear-gradient(to right, #FF416C, #FFB347);
+      background: linear-gradient(to right, #FF4E50, #F9D423);
       color: white;
       font-weight: bold;
       border: none;
-      border-radius: 30px;
-      padding: 10px 24px;
+      border-radius: 32px;
+      padding: 12px 24px;
       font-size: 0.9rem;
       cursor: pointer;
       align-self: center;
@@ -119,11 +123,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-top: 1vh;
+      margin-top: 0.5vh;
     }
 
     .trigguiletras {
-      height: 22px;
+      height: 20px;
       object-fit: contain;
     }
   </style>
